feat(exchange): Introduce full exchange semantic version line and reorganize project structure
- Added `shared/go/exchange` as an interface-first exchange semantic contract.
- Introduced `exchange_contract_todo` tests to outline future adapter requirements.
- Reordered chapter directories to reflect the new version line (v0-v4) and deep dives into domain concepts.
- Updated documentation to clarify the focus on exchange semantics over business implementation.
- Preserved existing runnable funds examples as appendix prototypes.
- Implemented new exchange-level contract definitions covering accounting, orders, executions, and more.
- Updated integration tests to reflect changes in chapter references and ensure compatibility with new prototypes.
- Added explicit build tags for unimplemented exchange scenarios to maintain clarity in testing.